Updated project to CR2 product.